// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageSpacesButton doesn't render if user profile forbids managing spaces 1`] = `
<ManageSpacesButtonUI
  capabilities={
    Object {
      "catalogue": Object {},
      "management": Object {},
      "navLinks": Object {},
      "spaces": Object {
        "manage": false,
      },
    }
  }
  intl={
    Object {
      "$t": [Function],
      "defaultFormats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "style": "long",
          },
          "hours": Object {
            "style": "long",
          },
          "minutes": Object {
            "style": "long",
          },
          "months": Object {
            "style": "long",
          },
          "seconds": Object {
            "style": "long",
          },
          "years": Object {
            "style": "long",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "defaultLocale": "en",
      "fallbackOnEmptyString": true,
      "formatDate": [Function],
      "formatDateTimeRange": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatListToParts": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "onWarn": [Function],
      "timeZone": undefined,
    }
  }
  navigateToApp={[MockFunction]}
  theme={
    Object {
      "colorMode": "LIGHT",
      "euiTheme": Object {
        "animation": Object {
          "bounce": "cubic-bezier(.34, 1.61, .7, 1)",
          "extraFast": "90ms",
          "extraSlow": "500ms",
          "fast": "150ms",
          "normal": "250ms",
          "resistance": "cubic-bezier(.694, .0482, .335, 1)",
          "slow": "350ms",
        },
        "base": 16,
        "border": Object {
          "color": "#E3E8F2",
          "editable": "2px dotted #E3E8F2",
          "radius": Object {
            "medium": "6px",
            "small": "4px",
          },
          "thick": "2px solid #E3E8F2",
          "thin": "1px solid #E3E8F2",
          "width": Object {
            "thick": "2px",
            "thin": "1px",
          },
        },
        "breakpoint": Object {
          "l": 992,
          "m": 768,
          "s": 575,
          "xl": 1200,
          "xs": 0,
        },
        "colors": Object {
          "accent": "#BC1E70",
          "accentSecondary": "#008B87",
          "accentText": "#A11262",
          "backgroundBaseAccent": "#FFEBF5",
          "backgroundBaseAccentSecondary": "#E2F9F7",
          "backgroundBaseDanger": "#FFE8E5",
          "backgroundBaseDisabled": "#ECF1F9",
          "backgroundBaseFormsControlDisabled": "#CAD3E2",
          "backgroundBaseFormsPrepend": "#ECF1F9",
          "backgroundBaseHighlighted": "#F6F9FC",
          "backgroundBaseInteractiveHover": "rgba(23,80,186, 0.04)",
          "backgroundBaseInteractiveOverlay": "rgba(72,89,117, 0.7)",
          "backgroundBaseInteractiveSelect": "#E8F1FF",
          "backgroundBasePlain": "#FFFFFF",
          "backgroundBasePrimary": "#E8F1FF",
          "backgroundBaseSkeletonEdge": "rgba(72,89,117, 0.16)",
          "backgroundBaseSkeletonMiddle": "rgba(72,89,117, 0.04)",
          "backgroundBaseSubdued": "#F6F9FC",
          "backgroundBaseSuccess": "#E2F8F0",
          "backgroundBaseWarning": "#FDF3D8",
          "backgroundFilledAccent": "#BC1E70",
          "backgroundFilledAccentSecondary": "#008B87",
          "backgroundFilledDanger": "#C61E25",
          "backgroundFilledPrimary": "#0B64DD",
          "backgroundFilledSuccess": "#008A5E",
          "backgroundFilledText": "#5A6D8C",
          "backgroundFilledWarning": "#FACB3D",
          "backgroundLightAccent": "#FDDDE9",
          "backgroundLightAccentSecondary": "#C9F3F0",
          "backgroundLightDanger": "#FDDDD8",
          "backgroundLightPrimary": "#D9E8FF",
          "backgroundLightSuccess": "#C9F3E3",
          "backgroundLightText": "#E3E8F2",
          "backgroundLightWarning": "#FDE9B5",
          "backgroundTransparent": "transparent",
          "backgroundTransparentAccent": "#FFEBF5",
          "backgroundTransparentAccentSecondary": "#E2F9F7",
          "backgroundTransparentDanger": "#FFE8E5",
          "backgroundTransparentHighlighted": "#ECF1F9",
          "backgroundTransparentPlain": "#ECF1F9",
          "backgroundTransparentPrimary": "#E8F1FF",
          "backgroundTransparentSubdued": "#ECF1F9",
          "backgroundTransparentSuccess": "#E2F8F0",
          "backgroundTransparentWarning": "#FDF3D8",
          "body": "#F6F9FC",
          "borderBaseAccent": "#FFC7DB",
          "borderBaseAccentSecondary": "#A6EDEA",
          "borderBaseDanger": "#FFC9C2",
          "borderBaseDisabled": "#CAD3E2",
          "borderBaseFloating": "transparent",
          "borderBaseFormsColorSwatch": "rgba(72,89,117, 0.24)",
          "borderBaseFormsControl": "#8E9FBC",
          "borderBasePlain": "#CAD3E2",
          "borderBasePrimary": "#BFDBFF",
          "borderBaseSubdued": "#E3E8F2",
          "borderBaseSuccess": "#AEE8D2",
          "borderBaseWarning": "#FCD883",
          "borderStrongAccent": "#A11262",
          "borderStrongAccentSecondary": "#047471",
          "borderStrongDanger": "#A71627",
          "borderStrongPrimary": "#1750BA",
          "borderStrongSuccess": "#09724D",
          "borderStrongWarning": "#825803",
          "danger": "#C61E25",
          "dangerText": "#A71627",
          "darkShade": "#5A6D8C",
          "darkestShade": "#2B394F",
          "disabled": "#E3E8F2",
          "disabledText": "#6A7FA0",
          "emptyShade": "#FFFFFF",
          "fullShade": "#07101F",
          "ghost": "#FFFFFF",
          "highlight": "#E8F1FF",
          "ink": "#07101F",
          "lightShade": "#CAD3E2",
          "lightestShade": "#ECF1F9",
          "link": "#1750BA",
          "mediumShade": "#8E9FBC",
          "plainDark": "#07101F",
          "plainLight": "#FFFFFF",
          "primary": "#0B64DD",
          "primaryText": "#1750BA",
          "shadow": "#000000",
          "subduedText": "#516381",
          "success": "#008A5E",
          "successText": "#09724D",
          "text": "#1D2A3E",
          "textAccent": "#A11262",
          "textAccentSecondary": "#047471",
          "textDanger": "#A71627",
          "textDisabled": "#798EAF",
          "textHeading": "#111C2C",
          "textInverse": "#FFFFFF",
          "textParagraph": "#1D2A3E",
          "textPrimary": "#1750BA",
          "textSubdued": "#516381",
          "textSuccess": "#09724D",
          "textWarning": "#6A4906",
          "title": "#111C2C",
          "vis": Object {
            "euiColorSeverity0": "#E3E6EB",
            "euiColorSeverity1": "#5A6D8C",
            "euiColorSeverity10": "#FC9188",
            "euiColorSeverity11": "#F6726A",
            "euiColorSeverity12": "#EE4C48",
            "euiColorSeverity13": "#DA3737",
            "euiColorSeverity14": "#C61E25",
            "euiColorSeverity2": "#7186A8",
            "euiColorSeverity3": "#8E9FBC",
            "euiColorSeverity4": "#ABB9D0",
            "euiColorSeverity5": "#CAD3E2",
            "euiColorSeverity6": "#FDE9B5",
            "euiColorSeverity7": "#FCD883",
            "euiColorSeverity8": "#FFC9C2",
            "euiColorSeverity9": "#FFB5AD",
            "euiColorVis0": "#16C5C0",
            "euiColorVis1": "#A6EDEA",
            "euiColorVis2": "#61A2FF",
            "euiColorVis3": "#BFDBFF",
            "euiColorVis4": "#EE72A6",
            "euiColorVis5": "#FFC7DB",
            "euiColorVis6": "#F6726A",
            "euiColorVis7": "#FFC9C2",
            "euiColorVis8": "#EAAE01",
            "euiColorVis9": "#FCD883",
            "euiColorVisAsTextDark0": "#16C5C0",
            "euiColorVisAsTextDark1": "#61A2FF",
            "euiColorVisAsTextDark2": "#EE72A6",
            "euiColorVisAsTextDark3": "#F6726A",
            "euiColorVisAsTextDark4": "#EAAE01",
            "euiColorVisAsTextDark5": "#24C292",
            "euiColorVisAsTextDark6": "#B084F5",
            "euiColorVisAsTextLight0": "#047471",
            "euiColorVisAsTextLight1": "#1750BA",
            "euiColorVisAsTextLight2": "#A11262",
            "euiColorVisAsTextLight3": "#A71627",
            "euiColorVisAsTextLight4": "#825803",
            "euiColorVisAsTextLight5": "#09724D",
            "euiColorVisAsTextLight6": "#6B3C9F",
            "euiColorVisBehindText0": "#16C5C0",
            "euiColorVisBehindText1": "#A6EDEA",
            "euiColorVisBehindText2": "#61A2FF",
            "euiColorVisBehindText3": "#BFDBFF",
            "euiColorVisBehindText4": "#EE72A6",
            "euiColorVisBehindText5": "#FFC7DB",
            "euiColorVisBehindText6": "#F6726A",
            "euiColorVisBehindText7": "#FFC9C2",
            "euiColorVisBehindText8": "#EAAE01",
            "euiColorVisBehindText9": "#FCD883",
            "euiColorVisComplementary0": "#61A2FF",
            "euiColorVisComplementary1": "#EAAE01",
            "euiColorVisCool0": "#E8F1FF",
            "euiColorVisCool1": "#A3CBFF",
            "euiColorVisCool2": "#61A2FF",
            "euiColorVisDanger0": "#F6726A",
            "euiColorVisDanger1": "#FFC9C2",
            "euiColorVisGrey0": "#CAD3E2",
            "euiColorVisGrey1": "#8E9FBC",
            "euiColorVisGrey2": "#5A6D8C",
            "euiColorVisGrey3": "#1D2A3E",
            "euiColorVisNeutral0": "#F6F9FC",
            "euiColorVisSuccess0": "#24C292",
            "euiColorVisSuccess1": "#AEE8D2",
            "euiColorVisWarm0": "#FFE8E5",
            "euiColorVisWarm1": "#FFB5AD",
            "euiColorVisWarm2": "#F6726A",
            "euiColorVisWarning0": "#FCD883",
          },
          "warning": "#FACB3D",
          "warningText": "#6A4906",
        },
        "components": Object {
          "badgeBackground": "#E3E8F2",
          "badgeBackgroundSubdued": "#E3E8F2",
          "badgeBorderColorHollow": "#CAD3E2",
          "badgeIconButtonBackgroundHover": "rgba(23,80,186, 0.04)",
          "bottomBarBackground": "#07101F",
          "breadcrumbsApplicationBackground": "#E3E8F2",
          "breadcrumbsApplicationColor": "#516381",
          "buttonGroupBorderColor": "#CAD3E2",
          "buttonGroupBorderColorSelected": "#CAD3E2",
          "buttonGroupFocusColor": "#1750BA",
          "buttons": Object {
            "backgroundAccent": "#FDDDE9",
            "backgroundAccentSecondary": "#C9F3F0",
            "backgroundDanger": "#FDDDD8",
            "backgroundDisabled": "#ECF1F9",
            "backgroundEmptyAccentHover": "rgba(23,80,186, 0.04)",
            "backgroundEmptyAccentSecondaryHover": "rgba(23,80,186, 0.04)",
            "backgroundEmptyDangerHover": "rgba(23,80,186, 0.04)",
            "backgroundEmptyPrimaryHover": "rgba(23,80,186, 0.04)",
            "backgroundEmptySuccessHover": "rgba(23,80,186, 0.04)",
            "backgroundEmptyTextHover": "rgba(23,80,186, 0.04)",
            "backgroundEmptyWarningHover": "rgba(23,80,186, 0.04)",
            "backgroundFilledAccent": "#BC1E70",
            "backgroundFilledAccentSecondary": "#008B87",
            "backgroundFilledDanger": "#C61E25",
            "backgroundFilledDisabled": "#ECF1F9",
            "backgroundFilledPrimary": "#0B64DD",
            "backgroundFilledSuccess": "#008A5E",
            "backgroundFilledText": "#5A6D8C",
            "backgroundFilledWarning": "#FACB3D",
            "backgroundPrimary": "#D9E8FF",
            "backgroundSuccess": "#C9F3E3",
            "backgroundText": "#E3E8F2",
            "backgroundWarning": "#FDE9B5",
            "textColorAccent": "#A11262",
            "textColorAccentSecondary": "#047471",
            "textColorDanger": "#A71627",
            "textColorDisabled": "#798EAF",
            "textColorFilledAccent": "#FFFFFF",
            "textColorFilledAccentSecondary": "#FFFFFF",
            "textColorFilledDanger": "#FFFFFF",
            "textColorFilledDisabled": "#798EAF",
            "textColorFilledPrimary": "#FFFFFF",
            "textColorFilledSuccess": "#FFFFFF",
            "textColorFilledText": "#FFFFFF",
            "textColorFilledWarning": "#6A4906",
            "textColorPrimary": "#1750BA",
            "textColorSuccess": "#09724D",
            "textColorText": "#1D2A3E",
            "textColorWarning": "#6A4906",
          },
          "codeAdditionColor": "#047471",
          "codeAttributeColor": "inherit",
          "codeBackground": "#F6F9FC",
          "codeBackgroundSelected": "inherit",
          "codeColor": "#1D2A3E",
          "codeCommentColor": "#516381",
          "codeDeletionColor": "#A71627",
          "codeFunctionTitleColor": "inherit",
          "codeInlineCodeKeywordColor": "#6B3C9F",
          "codeInlineColor": "#6B3C9F",
          "codeKeywordColor": "#1750BA",
          "codeMetaColor": "#516381",
          "codeNameColor": "#1750BA",
          "codeNumberColor": "#047471",
          "codeParamsColor": "inherit",
          "codeSectionColor": "#A71627",
          "codeSelectorClassColor": "inherit",
          "codeSelectorColor": "inherit",
          "codeSelectorIdColor": "inherit",
          "codeStringColor": "#A11262",
          "codeSymbolColor": "#A71627",
          "codeTagColor": "#1750BA",
          "codeTitleColor": "#825803",
          "codeTypeColor": "#1750BA",
          "collapsibleNavGroupBackground": "#F6F9FC",
          "collapsibleNavGroupBackgroundDark": "#07101F",
          "dataGridBorderColor": "#E3E8F2",
          "dataGridRowBackgroundHover": "rgba(23,80,186, 0.04)",
          "dataGridRowBackgroundSelect": "#E8F1FF",
          "dataGridRowBackgroundStriped": "#F6F9FC",
          "dataGridVerticalLineBorderColor": "#E3E8F2",
          "dragDropDraggingBackground": "#E2F8F0",
          "dragDropDraggingOverBackground": "#C9F3E3",
          "filterSelectItemBackgroundFocusDisabled": "#ECF1F9",
          "flyoutCloseButtonInsideBackground": "#FFFFFF",
          "flyoutFooterBackground": "#F6F9FC",
          "forms": Object {
            "background": "#FFFFFF",
            "backgroundAutofilled": "#E8F1FF",
            "backgroundDisabled": "#ECF1F9",
            "backgroundFocused": "#FFFFFF",
            "backgroundReadOnly": "#FFFFFF",
            "border": "#CAD3E2",
            "borderAutofilled": "#BFDBFF",
            "borderDisabled": "#CAD3E2",
            "colorDisabled": "#798EAF",
            "colorHasPlaceholder": "#516381",
            "controlBackgroundDisabled": "#CAD3E2",
            "controlBackgroundUnselected": "transparent",
            "controlBorder": "#8E9FBC",
            "controlBorderDisabled": "#CAD3E2",
            "controlBorderSelected": "#1750BA",
            "iconDisabled": "#798EAF",
            "maxWidth": "400px",
            "prependBackground": "#ECF1F9",
          },
          "headerBackground": "#FFFFFF",
          "headerDarkBackground": "#0B1628",
          "headerDarkSearchBorderColor": "#485975",
          "headerDarkSectionItemBackgroundFocus": "#0A2342",
          "keyPadMenuItemBackgroundDisabledSelect": "#ECF1F9",
          "listGroupItemBackgroundHover": "rgba(23,80,186, 0.04)",
          "listGroupItemBackgroundPrimaryActive": "#E8F1FF",
          "listGroupItemBackgroundPrimaryHover": "rgba(23,80,186, 0.04)",
          "listGroupItemBackgroundSubduedActive": "#E8F1FF",
          "loadingChartMonoBackground0": "#E3E8F2",
          "loadingChartMonoBackground1": "#CAD3E2",
          "loadingChartMonoBackground2": "#B4C1D5",
          "loadingChartMonoBackground3": "#A2B1C9",
          "loadingSpinnerBorder": "#CAD3E2",
          "loadingSpinnerHighlight": "#1750BA",
          "markBackground": "#D9E8FF",
          "markdownFormatTableBorderColor": "#CAD3E2",
          "popoverFooterBorderColor": "#E3E8F2",
          "popoverPanelBackground": "#FFFFFF",
          "scrollbarTrackColor": "#ECF1F9",
          "selectableListItemBorderColor": "#E3E8F2",
          "sideNavItemEmphasizedBackground": "#E8F1FF",
          "superDatePickerBackgroundSuccees": "#E2F8F0",
          "switchBackgroundOff": "#5A6D8C",
          "switchBackgroundOn": "#0B64DD",
          "switchCompressedBackgroundDisabled": "#CAD3E2",
          "switchIconDisabled": "#798EAF",
          "switchMiniBackgroundDisabled": "#CAD3E2",
          "switchThumbBackgroundDisabled": "#FFFFFF",
          "switchThumbBorderOff": "#5A6D8C",
          "switchThumbBorderOn": "#0B64DD",
          "switchUncompressedBackgroundDisabled": "#CAD3E2",
          "tableCellSortableIconColor": "#5A6D8C",
          "tableRowBackgroundHover": "rgba(23,80,186, 0.04)",
          "tableRowBackgroundSelected": "#E8F1FF",
          "tableRowBackgroundSelectedHover": "#E8F1FF",
          "tableRowInteractiveBackgroundFocus": "#E8F1FF",
          "tableRowInteractiveBackgroundHover": "#E8F1FF",
          "tooltipBackground": "#07101F",
          "tooltipBorder": "#2B394F",
          "tooltipBorderFloating": "transparent",
          "tourFooterBackground": "#F6F9FC",
          "treeViewItemBackgroundHover": "rgba(23,80,186, 0.04)",
        },
        "flags": Object {
          "hasGlobalFocusColor": true,
          "hasVisColorAdjustment": false,
        },
        "focus": Object {
          "backgroundColor": "rgba(23,80,186, 0.04)",
          "color": "#1750BA",
          "transparency": 0.1,
          "width": "2px",
        },
        "font": Object {
          "baseline": 4,
          "body": Object {
            "scale": "s",
            "weight": "regular",
          },
          "defaultUnits": "rem",
          "family": "'Inter', BlinkMacSystemFont, Helvetica, Arial, sans-serif",
          "familyCode": "'Roboto Mono', Menlo, Courier, monospace",
          "familySerif": "Georgia, Times, Times New Roman, serif",
          "featureSettings": "'calt' 1, 'kern' 1, 'liga' 1",
          "lineHeightMultiplier": 1.5,
          "scale": Object {
            "l": 1.25,
            "m": 1,
            "s": 0.875,
            "xl": 1.5,
            "xs": 0.75,
            "xxl": 1.875,
            "xxs": 0.6875,
            "xxxs": 0.5625,
          },
          "title": Object {
            "weight": "bold",
          },
          "weight": Object {
            "bold": 600,
            "light": 300,
            "medium": 450,
            "regular": 400,
            "semiBold": 500,
          },
        },
        "levels": Object {
          "content": 0,
          "flyout": 1000,
          "header": 1000,
          "mask": 6000,
          "maskBelowHeader": 1000,
          "menu": 2000,
          "modal": 8000,
          "navigation": 6000,
          "toast": 9000,
        },
        "size": Object {
          "base": "16px",
          "l": "24px",
          "m": "12px",
          "s": "8px",
          "xl": "32px",
          "xs": "4px",
          "xxl": "40px",
          "xxs": "2px",
          "xxxl": "48px",
          "xxxxl": "64px",
        },
        "themeName": "EUI_THEME_BOREALIS",
      },
      "modifications": Object {},
    }
  }
/>
`;

exports[`ManageSpacesButton renders as expected 1`] = `
<ManageSpacesButtonUI
  capabilities={
    Object {
      "catalogue": Object {},
      "management": Object {},
      "navLinks": Object {},
      "spaces": Object {
        "manage": true,
      },
    }
  }
  intl={
    Object {
      "$t": [Function],
      "defaultFormats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "style": "long",
          },
          "hours": Object {
            "style": "long",
          },
          "minutes": Object {
            "style": "long",
          },
          "months": Object {
            "style": "long",
          },
          "seconds": Object {
            "style": "long",
          },
          "years": Object {
            "style": "long",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "defaultLocale": "en",
      "fallbackOnEmptyString": true,
      "formatDate": [Function],
      "formatDateTimeRange": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatListToParts": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "onWarn": [Function],
      "timeZone": undefined,
    }
  }
  navigateToApp={[MockFunction]}
  theme={
    Object {
      "colorMode": "LIGHT",
      "euiTheme": Object {
        "animation": Object {
          "bounce": "cubic-bezier(.34, 1.61, .7, 1)",
          "extraFast": "90ms",
          "extraSlow": "500ms",
          "fast": "150ms",
          "normal": "250ms",
          "resistance": "cubic-bezier(.694, .0482, .335, 1)",
          "slow": "350ms",
        },
        "base": 16,
        "border": Object {
          "color": "#E3E8F2",
          "editable": "2px dotted #E3E8F2",
          "radius": Object {
            "medium": "6px",
            "small": "4px",
          },
          "thick": "2px solid #E3E8F2",
          "thin": "1px solid #E3E8F2",
          "width": Object {
            "thick": "2px",
            "thin": "1px",
          },
        },
        "breakpoint": Object {
          "l": 992,
          "m": 768,
          "s": 575,
          "xl": 1200,
          "xs": 0,
        },
        "colors": Object {
          "accent": "#BC1E70",
          "accentSecondary": "#008B87",
          "accentText": "#A11262",
          "backgroundBaseAccent": "#FFEBF5",
          "backgroundBaseAccentSecondary": "#E2F9F7",
          "backgroundBaseDanger": "#FFE8E5",
          "backgroundBaseDisabled": "#ECF1F9",
          "backgroundBaseFormsControlDisabled": "#CAD3E2",
          "backgroundBaseFormsPrepend": "#ECF1F9",
          "backgroundBaseHighlighted": "#F6F9FC",
          "backgroundBaseInteractiveHover": "rgba(23,80,186, 0.04)",
          "backgroundBaseInteractiveOverlay": "rgba(72,89,117, 0.7)",
          "backgroundBaseInteractiveSelect": "#E8F1FF",
          "backgroundBasePlain": "#FFFFFF",
          "backgroundBasePrimary": "#E8F1FF",
          "backgroundBaseSkeletonEdge": "rgba(72,89,117, 0.16)",
          "backgroundBaseSkeletonMiddle": "rgba(72,89,117, 0.04)",
          "backgroundBaseSubdued": "#F6F9FC",
          "backgroundBaseSuccess": "#E2F8F0",
          "backgroundBaseWarning": "#FDF3D8",
          "backgroundFilledAccent": "#BC1E70",
          "backgroundFilledAccentSecondary": "#008B87",
          "backgroundFilledDanger": "#C61E25",
          "backgroundFilledPrimary": "#0B64DD",
          "backgroundFilledSuccess": "#008A5E",
          "backgroundFilledText": "#5A6D8C",
          "backgroundFilledWarning": "#FACB3D",
          "backgroundLightAccent": "#FDDDE9",
          "backgroundLightAccentSecondary": "#C9F3F0",
          "backgroundLightDanger": "#FDDDD8",
          "backgroundLightPrimary": "#D9E8FF",
          "backgroundLightSuccess": "#C9F3E3",
          "backgroundLightText": "#E3E8F2",
          "backgroundLightWarning": "#FDE9B5",
          "backgroundTransparent": "transparent",
          "backgroundTransparentAccent": "#FFEBF5",
          "backgroundTransparentAccentSecondary": "#E2F9F7",
          "backgroundTransparentDanger": "#FFE8E5",
          "backgroundTransparentHighlighted": "#ECF1F9",
          "backgroundTransparentPlain": "#ECF1F9",
          "backgroundTransparentPrimary": "#E8F1FF",
          "backgroundTransparentSubdued": "#ECF1F9",
          "backgroundTransparentSuccess": "#E2F8F0",
          "backgroundTransparentWarning": "#FDF3D8",
          "body": "#F6F9FC",
          "borderBaseAccent": "#FFC7DB",
          "borderBaseAccentSecondary": "#A6EDEA",
          "borderBaseDanger": "#FFC9C2",
          "borderBaseDisabled": "#CAD3E2",
          "borderBaseFloating": "transparent",
          "borderBaseFormsColorSwatch": "rgba(72,89,117, 0.24)",
          "borderBaseFormsControl": "#8E9FBC",
          "borderBasePlain": "#CAD3E2",
          "borderBasePrimary": "#BFDBFF",
          "borderBaseSubdued": "#E3E8F2",
          "borderBaseSuccess": "#AEE8D2",
          "borderBaseWarning": "#FCD883",
          "borderStrongAccent": "#A11262",
          "borderStrongAccentSecondary": "#047471",
          "borderStrongDanger": "#A71627",
          "borderStrongPrimary": "#1750BA",
          "borderStrongSuccess": "#09724D",
          "borderStrongWarning": "#825803",
          "danger": "#C61E25",
          "dangerText": "#A71627",
          "darkShade": "#5A6D8C",
          "darkestShade": "#2B394F",
          "disabled": "#E3E8F2",
          "disabledText": "#6A7FA0",
          "emptyShade": "#FFFFFF",
          "fullShade": "#07101F",
          "ghost": "#FFFFFF",
          "highlight": "#E8F1FF",
          "ink": "#07101F",
          "lightShade": "#CAD3E2",
          "lightestShade": "#ECF1F9",
          "link": "#1750BA",
          "mediumShade": "#8E9FBC",
          "plainDark": "#07101F",
          "plainLight": "#FFFFFF",
          "primary": "#0B64DD",
          "primaryText": "#1750BA",
          "shadow": "#000000",
          "subduedText": "#516381",
          "success": "#008A5E",
          "successText": "#09724D",
          "text": "#1D2A3E",
          "textAccent": "#A11262",
          "textAccentSecondary": "#047471",
          "textDanger": "#A71627",
          "textDisabled": "#798EAF",
          "textHeading": "#111C2C",
          "textInverse": "#FFFFFF",
          "textParagraph": "#1D2A3E",
          "textPrimary": "#1750BA",
          "textSubdued": "#516381",
          "textSuccess": "#09724D",
          "textWarning": "#6A4906",
          "title": "#111C2C",
          "vis": Object {
            "euiColorSeverity0": "#E3E6EB",
            "euiColorSeverity1": "#5A6D8C",
            "euiColorSeverity10": "#FC9188",
            "euiColorSeverity11": "#F6726A",
            "euiColorSeverity12": "#EE4C48",
            "euiColorSeverity13": "#DA3737",
            "euiColorSeverity14": "#C61E25",
            "euiColorSeverity2": "#7186A8",
            "euiColorSeverity3": "#8E9FBC",
            "euiColorSeverity4": "#ABB9D0",
            "euiColorSeverity5": "#CAD3E2",
            "euiColorSeverity6": "#FDE9B5",
            "euiColorSeverity7": "#FCD883",
            "euiColorSeverity8": "#FFC9C2",
            "euiColorSeverity9": "#FFB5AD",
            "euiColorVis0": "#16C5C0",
            "euiColorVis1": "#A6EDEA",
            "euiColorVis2": "#61A2FF",
            "euiColorVis3": "#BFDBFF",
            "euiColorVis4": "#EE72A6",
            "euiColorVis5": "#FFC7DB",
            "euiColorVis6": "#F6726A",
            "euiColorVis7": "#FFC9C2",
            "euiColorVis8": "#EAAE01",
            "euiColorVis9": "#FCD883",
            "euiColorVisAsTextDark0": "#16C5C0",
            "euiColorVisAsTextDark1": "#61A2FF",
            "euiColorVisAsTextDark2": "#EE72A6",
            "euiColorVisAsTextDark3": "#F6726A",
            "euiColorVisAsTextDark4": "#EAAE01",
            "euiColorVisAsTextDark5": "#24C292",
            "euiColorVisAsTextDark6": "#B084F5",
            "euiColorVisAsTextLight0": "#047471",
            "euiColorVisAsTextLight1": "#1750BA",
            "euiColorVisAsTextLight2": "#A11262",
            "euiColorVisAsTextLight3": "#A71627",
            "euiColorVisAsTextLight4": "#825803",
            "euiColorVisAsTextLight5": "#09724D",
            "euiColorVisAsTextLight6": "#6B3C9F",
            "euiColorVisBehindText0": "#16C5C0",
            "euiColorVisBehindText1": "#A6EDEA",
            "euiColorVisBehindText2": "#61A2FF",
            "euiColorVisBehindText3": "#BFDBFF",
            "euiColorVisBehindText4": "#EE72A6",
            "euiColorVisBehindText5": "#FFC7DB",
            "euiColorVisBehindText6": "#F6726A",
            "euiColorVisBehindText7": "#FFC9C2",
            "euiColorVisBehindText8": "#EAAE01",
            "euiColorVisBehindText9": "#FCD883",
            "euiColorVisComplementary0": "#61A2FF",
            "euiColorVisComplementary1": "#EAAE01",
            "euiColorVisCool0": "#E8F1FF",
            "euiColorVisCool1": "#A3CBFF",
            "euiColorVisCool2": "#61A2FF",
            "euiColorVisDanger0": "#F6726A",
            "euiColorVisDanger1": "#FFC9C2",
            "euiColorVisGrey0": "#CAD3E2",
            "euiColorVisGrey1": "#8E9FBC",
            "euiColorVisGrey2": "#5A6D8C",
            "euiColorVisGrey3": "#1D2A3E",
            "euiColorVisNeutral0": "#F6F9FC",
            "euiColorVisSuccess0": "#24C292",
            "euiColorVisSuccess1": "#AEE8D2",
            "euiColorVisWarm0": "#FFE8E5",
            "euiColorVisWarm1": "#FFB5AD",
            "euiColorVisWarm2": "#F6726A",
            "euiColorVisWarning0": "#FCD883",
          },
          "warning": "#FACB3D",
          "warningText": "#6A4906",
        },
        "components": Object {
          "badgeBackground": "#E3E8F2",
          "badgeBackgroundSubdued": "#E3E8F2",
          "badgeBorderColorHollow": "#CAD3E2",
          "badgeIconButtonBackgroundHover": "rgba(23,80,186, 0.04)",
          "bottomBarBackground": "#07101F",
          "breadcrumbsApplicationBackground": "#E3E8F2",
          "breadcrumbsApplicationColor": "#516381",
          "buttonGroupBorderColor": "#CAD3E2",
          "buttonGroupBorderColorSelected": "#CAD3E2",
          "buttonGroupFocusColor": "#1750BA",
          "buttons": Object {
            "backgroundAccent": "#FDDDE9",
            "backgroundAccentSecondary": "#C9F3F0",
            "backgroundDanger": "#FDDDD8",
            "backgroundDisabled": "#ECF1F9",
            "backgroundEmptyAccentHover": "rgba(23,80,186, 0.04)",
            "backgroundEmptyAccentSecondaryHover": "rgba(23,80,186, 0.04)",
            "backgroundEmptyDangerHover": "rgba(23,80,186, 0.04)",
            "backgroundEmptyPrimaryHover": "rgba(23,80,186, 0.04)",
            "backgroundEmptySuccessHover": "rgba(23,80,186, 0.04)",
            "backgroundEmptyTextHover": "rgba(23,80,186, 0.04)",
            "backgroundEmptyWarningHover": "rgba(23,80,186, 0.04)",
            "backgroundFilledAccent": "#BC1E70",
            "backgroundFilledAccentSecondary": "#008B87",
            "backgroundFilledDanger": "#C61E25",
            "backgroundFilledDisabled": "#ECF1F9",
            "backgroundFilledPrimary": "#0B64DD",
            "backgroundFilledSuccess": "#008A5E",
            "backgroundFilledText": "#5A6D8C",
            "backgroundFilledWarning": "#FACB3D",
            "backgroundPrimary": "#D9E8FF",
            "backgroundSuccess": "#C9F3E3",
            "backgroundText": "#E3E8F2",
            "backgroundWarning": "#FDE9B5",
            "textColorAccent": "#A11262",
            "textColorAccentSecondary": "#047471",
            "textColorDanger": "#A71627",
            "textColorDisabled": "#798EAF",
            "textColorFilledAccent": "#FFFFFF",
            "textColorFilledAccentSecondary": "#FFFFFF",
            "textColorFilledDanger": "#FFFFFF",
            "textColorFilledDisabled": "#798EAF",
            "textColorFilledPrimary": "#FFFFFF",
            "textColorFilledSuccess": "#FFFFFF",
            "textColorFilledText": "#FFFFFF",
            "textColorFilledWarning": "#6A4906",
            "textColorPrimary": "#1750BA",
            "textColorSuccess": "#09724D",
            "textColorText": "#1D2A3E",
            "textColorWarning": "#6A4906",
          },
          "codeAdditionColor": "#047471",
          "codeAttributeColor": "inherit",
          "codeBackground": "#F6F9FC",
          "codeBackgroundSelected": "inherit",
          "codeColor": "#1D2A3E",
          "codeCommentColor": "#516381",
          "codeDeletionColor": "#A71627",
          "codeFunctionTitleColor": "inherit",
          "codeInlineCodeKeywordColor": "#6B3C9F",
          "codeInlineColor": "#6B3C9F",
          "codeKeywordColor": "#1750BA",
          "codeMetaColor": "#516381",
          "codeNameColor": "#1750BA",
          "codeNumberColor": "#047471",
          "codeParamsColor": "inherit",
          "codeSectionColor": "#A71627",
          "codeSelectorClassColor": "inherit",
          "codeSelectorColor": "inherit",
          "codeSelectorIdColor": "inherit",
          "codeStringColor": "#A11262",
          "codeSymbolColor": "#A71627",
          "codeTagColor": "#1750BA",
          "codeTitleColor": "#825803",
          "codeTypeColor": "#1750BA",
          "collapsibleNavGroupBackground": "#F6F9FC",
          "collapsibleNavGroupBackgroundDark": "#07101F",
          "dataGridBorderColor": "#E3E8F2",
          "dataGridRowBackgroundHover": "rgba(23,80,186, 0.04)",
          "dataGridRowBackgroundSelect": "#E8F1FF",
          "dataGridRowBackgroundStriped": "#F6F9FC",
          "dataGridVerticalLineBorderColor": "#E3E8F2",
          "dragDropDraggingBackground": "#E2F8F0",
          "dragDropDraggingOverBackground": "#C9F3E3",
          "filterSelectItemBackgroundFocusDisabled": "#ECF1F9",
          "flyoutCloseButtonInsideBackground": "#FFFFFF",
          "flyoutFooterBackground": "#F6F9FC",
          "forms": Object {
            "background": "#FFFFFF",
            "backgroundAutofilled": "#E8F1FF",
            "backgroundDisabled": "#ECF1F9",
            "backgroundFocused": "#FFFFFF",
            "backgroundReadOnly": "#FFFFFF",
            "border": "#CAD3E2",
            "borderAutofilled": "#BFDBFF",
            "borderDisabled": "#CAD3E2",
            "colorDisabled": "#798EAF",
            "colorHasPlaceholder": "#516381",
            "controlBackgroundDisabled": "#CAD3E2",
            "controlBackgroundUnselected": "transparent",
            "controlBorder": "#8E9FBC",
            "controlBorderDisabled": "#CAD3E2",
            "controlBorderSelected": "#1750BA",
            "iconDisabled": "#798EAF",
            "maxWidth": "400px",
            "prependBackground": "#ECF1F9",
          },
          "headerBackground": "#FFFFFF",
          "headerDarkBackground": "#0B1628",
          "headerDarkSearchBorderColor": "#485975",
          "headerDarkSectionItemBackgroundFocus": "#0A2342",
          "keyPadMenuItemBackgroundDisabledSelect": "#ECF1F9",
          "listGroupItemBackgroundHover": "rgba(23,80,186, 0.04)",
          "listGroupItemBackgroundPrimaryActive": "#E8F1FF",
          "listGroupItemBackgroundPrimaryHover": "rgba(23,80,186, 0.04)",
          "listGroupItemBackgroundSubduedActive": "#E8F1FF",
          "loadingChartMonoBackground0": "#E3E8F2",
          "loadingChartMonoBackground1": "#CAD3E2",
          "loadingChartMonoBackground2": "#B4C1D5",
          "loadingChartMonoBackground3": "#A2B1C9",
          "loadingSpinnerBorder": "#CAD3E2",
          "loadingSpinnerHighlight": "#1750BA",
          "markBackground": "#D9E8FF",
          "markdownFormatTableBorderColor": "#CAD3E2",
          "popoverFooterBorderColor": "#E3E8F2",
          "popoverPanelBackground": "#FFFFFF",
          "scrollbarTrackColor": "#ECF1F9",
          "selectableListItemBorderColor": "#E3E8F2",
          "sideNavItemEmphasizedBackground": "#E8F1FF",
          "superDatePickerBackgroundSuccees": "#E2F8F0",
          "switchBackgroundOff": "#5A6D8C",
          "switchBackgroundOn": "#0B64DD",
          "switchCompressedBackgroundDisabled": "#CAD3E2",
          "switchIconDisabled": "#798EAF",
          "switchMiniBackgroundDisabled": "#CAD3E2",
          "switchThumbBackgroundDisabled": "#FFFFFF",
          "switchThumbBorderOff": "#5A6D8C",
          "switchThumbBorderOn": "#0B64DD",
          "switchUncompressedBackgroundDisabled": "#CAD3E2",
          "tableCellSortableIconColor": "#5A6D8C",
          "tableRowBackgroundHover": "rgba(23,80,186, 0.04)",
          "tableRowBackgroundSelected": "#E8F1FF",
          "tableRowBackgroundSelectedHover": "#E8F1FF",
          "tableRowInteractiveBackgroundFocus": "#E8F1FF",
          "tableRowInteractiveBackgroundHover": "#E8F1FF",
          "tooltipBackground": "#07101F",
          "tooltipBorder": "#2B394F",
          "tooltipBorderFloating": "transparent",
          "tourFooterBackground": "#F6F9FC",
          "treeViewItemBackgroundHover": "rgba(23,80,186, 0.04)",
        },
        "flags": Object {
          "hasGlobalFocusColor": true,
          "hasVisColorAdjustment": false,
        },
        "focus": Object {
          "backgroundColor": "rgba(23,80,186, 0.04)",
          "color": "#1750BA",
          "transparency": 0.1,
          "width": "2px",
        },
        "font": Object {
          "baseline": 4,
          "body": Object {
            "scale": "s",
            "weight": "regular",
          },
          "defaultUnits": "rem",
          "family": "'Inter', BlinkMacSystemFont, Helvetica, Arial, sans-serif",
          "familyCode": "'Roboto Mono', Menlo, Courier, monospace",
          "familySerif": "Georgia, Times, Times New Roman, serif",
          "featureSettings": "'calt' 1, 'kern' 1, 'liga' 1",
          "lineHeightMultiplier": 1.5,
          "scale": Object {
            "l": 1.25,
            "m": 1,
            "s": 0.875,
            "xl": 1.5,
            "xs": 0.75,
            "xxl": 1.875,
            "xxs": 0.6875,
            "xxxs": 0.5625,
          },
          "title": Object {
            "weight": "bold",
          },
          "weight": Object {
            "bold": 600,
            "light": 300,
            "medium": 450,
            "regular": 400,
            "semiBold": 500,
          },
        },
        "levels": Object {
          "content": 0,
          "flyout": 1000,
          "header": 1000,
          "mask": 6000,
          "maskBelowHeader": 1000,
          "menu": 2000,
          "modal": 8000,
          "navigation": 6000,
          "toast": 9000,
        },
        "size": Object {
          "base": "16px",
          "l": "24px",
          "m": "12px",
          "s": "8px",
          "xl": "32px",
          "xs": "4px",
          "xxl": "40px",
          "xxs": "2px",
          "xxxl": "48px",
          "xxxxl": "64px",
        },
        "themeName": "EUI_THEME_BOREALIS",
      },
      "modifications": Object {},
    }
  }
/>
`;
